compile_log_surreal_3.txt
cargo :     Checking glassbox 
v0.1.0 (D:\AI and  datascience 
projects\Project 8\glassbox)
At line:1 char:1
+ cargo check --target 
wasm32-unknown-unknown 2>&1 | 
Out-File compile_l ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~
    + CategoryInfo          : NotS 
   pecified: (    Checking gl...e  
  ct 8\glassbox):String) [], Rem   
 oteException
    + FullyQualifiedErrorId : Nati 
   veCommandError
 
warning: unused import: 
`leptos::attr::Selected`
 --> src\components\search.rs:1:5
  |
1 | use leptos::attr::Selected;
  |     ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: 
`#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

error[E0382]: borrow of moved 
value: `q`
  --> 
src\components\search.rs:63:33
   |
30 |         let q = query.get();
   |             - move occurs 
because `q` has type 
`std::string::String`, which does 
not implement the `Copy` trait
...
37 |         
leptos::task::spawn_local(async 
move {
   |                               
    ---------- value moved here
...
40 |             match 
search_videos(&q).await {
   |                               
   - variable moved due to use in 
coroutine
...
63 |                 let query_val 
= q.clone();
   |                               
  ^ value borrowed here after move
   |
help: consider cloning the value 
before moving it into the closure
   |
37 ~         let value = q.clone();
38 ~         
leptos::task::spawn_local(async 
move {
39 |             // Updated to 
pass String, not &str, as per 
server function signature
40 |             // Start search
41 ~             match 
search_videos(&value).await {
   |

warning: unused variable: 
`u_for_session`
  --> src\pages\login.rs:30:13
   |
30 |         let u_for_session = 
u_val.clone(); 
   |             ^^^^^^^^^^^^^ 
help: if this is intentional, 
prefix it with an underscore: 
`_u_for_session`
   |
   = note: 
`#[warn(unused_variables)]` (part 
of `#[warn(unused)]`) on by default

warning: unused variable: `video`
  --> src\model\video.rs:29:25
   |
29 | pub async fn 
save_video(video: Video) -> 
Result<Video, String> {
   |                         ^^^^^ 
help: if this is intentional, 
prefix it with an underscore: 
`_video`

warning: unused variable: 
`on_movie_click`
  --> src\components\search.rs:20:9
   |
20 |     let on_movie_click = move 
|video: Video| {
   |         ^^^^^^^^^^^^^^ help: 
if this is intentional, prefix it 
with an underscore: 
`_on_movie_click`

For more information about this 
error, try `rustc --explain E0382`.
warning: `glassbox` (bin 
"glassbox") generated 4 warnings
error: could not compile 
`glassbox` (bin "glassbox") due to 
1 previous error; 4 warnings 
emitted
